# TechNewsAggregator

./: README.md  main.py  pyproject.toml
app/scrapers/: __init__.py  test_youtube_scraper.py  youtube.py
app/services/: __init__.py  youtube_transcript.py
