[project]
name = "technewsaggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "html5lib>=1.1",
    "openai>=2.15.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "youtube-transcript-api>=0.6.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
